--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,19 @@
     outline: none;
     transition: 0.3s;
 }
+#image-preview
+{
+    width: 300px;
+    height: 200px;
+    border: 1px solid #ccc;
+    background-size: cover;
+    background-position: center;
+}
+#color-picker
+{
+    width: 50px;
+    height: 30px;
+    border: none;
+    padding: 5px;
+    font-size: 16px;
+}
