--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,17 @@
     padding: 5px;
     font-size: 16px;
 }
+#color-wheel
+{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    background-image: linear-gradient(to bottom, #ff0000, #ffff00, #00ff00, #00ffff, #0000ff, #ff00ff);
+    background-size: 100% 100%;
+}
+#color-picker
+{
+    display: none;
+}
