--- a/styles/style.css
+++ b/styles/style.css
@@ -11,31 +11,34 @@
 }
 #image-preview
 {
-    width: 300px;
-    height: 200px;
-    border: 1px solid #ccc;
     background-size: cover;
     background-position: center;
-}
-#color-picker
-{
-    width: 50px;
-    height: 30px;
-    border: none;
-    padding: 5px;
-    font-size: 16px;
+    width: 400px;
+    height: 400px;
+    border: 1px solid #ccc;
 }
 #color-wheel
 {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+    cursor: crosshair;
+    width: 400px;
+    height: 400px;
     border: 1px solid #ccc;
-    cursor: pointer;
-    background-image: linear-gradient(to bottom, #ff0000, #ffff00, #00ff00, #00ffff, #0000ff, #ff00ff);
-    background-size: 100% 100%;
+    position: relative;
 }
-#color-picker
+#color-dot
 {
-    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+#selected-color
+{
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 20px;
 }
