--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,45 @@
     outline: none;
     transition: 0.3s;
 }
+h1
+{
+    text-align: center;
+    margin: 50px;
+}
 #image-preview
 {
     background-size: cover;
     background-position: center;
     width: 400px;
     height: 400px;
+    border: 1px solid gray;
+}
+input#image-upload
+{
+    background-color: red;
+}
+#image-upload
+{
+    display: none;
+}
+.custom-file-upload
+{
     border: 1px solid #ccc;
+    border-radius: 5px;
+    width: fit-content;
+    height: 20px;
+    padding: 0px 20px;
+    cursor: pointer;
+    position: absolute;
+}
+.custom-file-upload:hover
+{
+    background-color: #f0f0f0;
+}
+.core-section
+{
+    display: flex;
+    justify-content: space-between;
 }
 #color-wheel
 {
@@ -24,16 +56,17 @@
     height: 400px;
     border: 1px solid #ccc;
     position: relative;
+    background-size: 100% 100%;
 }
 #color-dot
 {
     position: absolute;
     top: 0;
     left: 0;
-    width: 10px;
-    height: 10px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #9494941d;
     border: 1px solid #ccc;
 }
 #selected-color
