--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,12 @@
     outline: none;
     transition: 0.3s;
 }
+body
+{
+    background-color: #fafafa;
+    width: 100%;
+    height: 100vh;
+}
 h1
 {
     text-align: center;
@@ -39,6 +45,7 @@ input#image-upload
     padding: 0px 20px;
     cursor: pointer;
     position: absolute;
+    background-color: #fafafa;
 }
 .custom-file-upload:hover
 {
@@ -48,15 +55,19 @@ input#image-upload
 {
     display: flex;
     justify-content: space-between;
+    width: 80%;
+    margin: auto;
 }
 #color-wheel
 {
     cursor: crosshair;
-    width: 400px;
+    width: 50%;
     height: 400px;
     border: 1px solid #ccc;
     position: relative;
-    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 #color-dot
 {
@@ -74,4 +85,12 @@ input#image-upload
     font-size: 18px;
     font-weight: bold;
     margin-top: 20px;
+}
+#color-picker
+{
+    display: none;
+}
+p
+{
+    text-align: center;
 }
