--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,25 @@
   outline: none;
   transition: 0.3s;
 }
+::-webkit-scrollbar
+{
+    display: block;
+    width: 10px;
+}
+::-webkit-scrollbar-thumb
+{
+    background-color: black;
+    border-radius: 20px;
+}
+::-webkit-scrollbar-track
+{
+    background-color: white;
+}
 body {
   background-color: #fafafa;
   width: 100%;
   height: 100vh;
+  overflow-x: hidden;
 }
 h1 {
   text-align: center;
@@ -95,19 +110,19 @@ p {
   }
 }
 @media screen and (max-width: 900px) {
-    .core-section {
-      width: 100%;
-      gap: 20px;
-      flex-direction: column;
-    }
-    #image-preview {
-      width: 90%;
-      height: 200px;
-      margin: auto;
-    }
-    #color-wheel {
-      width: 90%;
-      margin: auto;
-      box-shadow: none;
-    }
+  .core-section {
+    width: 100%;
+    gap: 20px;
+    flex-direction: column;
   }
+  #image-preview {
+    width: 90%;
+    height: 200px;
+    margin: auto;
+  }
+  #color-wheel {
+    width: 90%;
+    margin: auto;
+    box-shadow: none;
+  }
+}
