--- a/styles/style.css
+++ b/styles/style.css
@@ -8,19 +8,16 @@
   outline: none;
   transition: 0.3s;
 }
-::-webkit-scrollbar
-{
-    display: block;
-    width: 10px;
+::-webkit-scrollbar {
+  display: block;
+  width: 10px;
 }
-::-webkit-scrollbar-thumb
-{
-    background-color: black;
-    border-radius: 20px;
+::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 20px;
 }
-::-webkit-scrollbar-track
-{
-    background-color: white;
+::-webkit-scrollbar-track {
+  background-color: white;
 }
 body {
   background-color: #fafafa;
@@ -86,7 +83,6 @@ h1 {
 #selected-color {
   font-size: 18px;
   font-weight: bold;
-  margin-top: 20px;
 }
 #color-picker {
   display: none;
@@ -95,6 +91,18 @@ p {
   text-align: center;
   margin: 50px;
   font-weight: bold;
+}
+.flex {
+  display: flex;
+  width: 100%;
+  gap: 10px;
+  align-items: center;
+}
+#copy-color-btn {
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+  border: 1px solid black;
 }
 @media screen and (max-width: 1200px) {
   .core-section {
@@ -125,4 +133,9 @@ p {
     margin: auto;
     box-shadow: none;
   }
+}
+
+button, a
+{
+    cursor: pointer;
 }
