--- a/styles/style.css
+++ b/styles/style.css
@@ -8,22 +8,28 @@
   outline: none;
   transition: 0.3s;
 }
+:root {
+  --white-clr: #fff;
+  --black-clr: #000;
+  --light-blue: #b0caff;
+  --gray-clr: #808080;
+}
 ::-webkit-scrollbar {
   display: block;
   width: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: black;
+  background-color: var(--black-clr);
   border-radius: 20px;
 }
 ::-webkit-scrollbar-track {
-  background-color: white;
+  background-color: var(--white-clr);
 }
 body {
-  background-color: #fafafa;
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
+  background: radial-gradient(var(--white-clr), var(--light-blue));
 }
 h1 {
   text-align: center;
@@ -34,24 +40,24 @@ h1 {
   background-position: center;
   width: 400px;
   height: 400px;
-  border: 1px solid gray;
-  box-shadow: 0 0 10px black;
+  border: 1px solid var(--gray-clr);
+  box-shadow: 0 0 10px var(--black-clr);
 }
 #image-upload {
   display: none;
 }
 .custom-file-upload {
-  border: 1px solid #ccc;
+  border: 1px solid var(--gray-clr);
   border-radius: 5px;
   width: fit-content;
   height: 20px;
   padding: 0px 20px;
   cursor: pointer;
   position: absolute;
-  background-color: #fafafa;
+  background-color: var(--white-clr);
 }
 .custom-file-upload:hover {
-  background-color: #f0f0f0;
+  background-color: var(--white-clr);
 }
 .core-section {
   display: flex;
@@ -63,12 +69,12 @@ h1 {
   cursor: crosshair;
   width: 50%;
   height: 400px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--gray-clr);
   position: relative;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  box-shadow: 0 0 10px black;
+  box-shadow: 0 0 10px var(--black-clr);
 }
 #color-dot {
   position: absolute;
@@ -77,8 +83,8 @@ h1 {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #9494941d;
-  border: 1px solid #ccc;
+  background-color: #94949455;
+  border: 1px solid var(--gray-clr);
 }
 #selected-color {
   font-size: 18px;
@@ -99,10 +105,10 @@ p {
   align-items: center;
 }
 #copy-color-btn {
-  background-color: white;
+  background-color: var(--white-clr);
   border-radius: 10px;
   padding: 10px;
-  border: 1px solid black;
+  border: 1px solid var(--black-clr);
 }
 button,
 a {
