--- a/styles/style.css
+++ b/styles/style.css
@@ -47,14 +47,14 @@ h1 {
   display: none;
 }
 .custom-file-upload {
-  border: 1px solid var(--gray-clr);
-  border-radius: 5px;
   width: fit-content;
   height: 20px;
-  padding: 0px 20px;
   cursor: pointer;
   position: absolute;
   background-color: var(--white-clr);
+  border-radius: 10px;
+  padding: 0 20px;
+  border: 1px solid var(--black-clr);
 }
 .custom-file-upload:hover {
   background-color: var(--white-clr);
@@ -100,8 +100,9 @@ p {
 }
 .flex {
   display: flex;
-  width: 100%;
+  width: fit-content;
   gap: 10px;
+  margin: auto;
   align-items: center;
 }
 #copy-color-btn {
@@ -116,6 +117,10 @@ a {
 }
 .hide {
   display: none;
+}
+button:hover,
+.custom-file-upload:hover {
+  opacity: 0.8;
 }
 @media screen and (max-width: 1200px) {
   .core-section {
